tests/miniJava/neg/005848_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { Main System.out.println ( { } ) ; } }
